@@ -1,5 +1,7 @@
 2004-11-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* tests/testiconview.c: Add a real "Add many" button.
+
 	* gtk/gtkaction.[hc]: 
 	* gtk/gtkactiongroup.[hc]: Make return types G_CONST_RETURN
 	instead of const.
